# vcdgen

./: CMakeLists.txt  LICENSE.md  README.md
examples/: sample_001.vcd
include/: CMakeLists.txt  vcdgen.h
tests/: CMakeLists.txt  test.cpp  test_002_golden.vcd  utils.h
tests/golden/: test_001_golden.vcd
